# python-testing

./: .editorconfig  .gitignore  README.md  bank.py  guess.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  sqlplayground.py  test_bank.py  test_bankaccount.py  test_python_org.py  variables.toml  work_with_strings.py
bank/: bankaccount.py
docs/: day.1.md  day.2.md  day.3.md
resources/: chinook.sqlite
tests/: conftest.py  test_bankaccount.py  test_chinook.py  test_movie.py  test_movies.py
tests/bankaccount/: conftest.py  test_bankaccount.py  test_deposit.py  test_get_balance.py  test_withdraw.py
tests/dsl.sk/: conftest.py  test_login.py
tests/dslsk/: config.json  conftest.py  test_login_form.py
tests/movies/: conftest.py  movie.json  movie.jsonschema  movie.schema.json  test_movie.py  test_movie_creation.py  test_single_movie.py  test_unauthorized.py
tests/pages/: login_page.py
tests/python.org/: conftest.py  test_pythonorg.py
tests/pythonorg/: conftest.py  test_homepage.py
tests/sandbox/: test_login.py
training/: bankaccount.py
