[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["mirek <mirek@cnl.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.3"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ipython = "^8.22.1"
pytest-cov = "^4.1.0"
pytest-html = "^4.1.1"
pytest-xdist = "^3.5.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--html=reports/report.html",
    "--self-contained-html",
#    "--cov",
    "--cov-report=html:reports/coverage/",
    "--cov-report=term",
#    "--numprocesses=auto"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "wip: Work in progress",
]

